--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
     <version>4.0.0</version>
     <scope>test</scope>
 </dependency>
+<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+<dependency>
+    <groupId>io.appium</groupId>
+    <artifactId>java-client</artifactId>
+    <version>7.1.0</version>
+</dependency>
 
   </dependencies>
 </project>
